# Coltex-RAG

./: .gitignore  CHANGELOG.md  ENTERPRISE-LICENSE.md  EULA  EULA.md  LICENSE  LICENSING.md  MEGA-LICENSE.md  Makefile  NOTICE  PERSONAL-LICENSE.md  PROFESSIONAL-LICENSE.md  README.md  coltex  pyproject.toml
benchmarks/: benchmark_manifest.json  distribution_audit.json  faq_pairs.jsonl  rag_eval.jsonl  retrieval_gold.jsonl
brain/: __main__.py  brain.py
chatbot/: cli.py  inference.py  model.py  tokenizer.py
config/: brain.yaml  brain_architecture.yaml  categories_premium.yaml  corpus_generation.yaml  corpus_mega.yaml  deployment.yaml  extensibility.yaml  governance.yaml  knowledge_corpus.yaml  marketplace.yaml  product.yaml  product_enterprise.yaml  product_hyper.yaml  product_hyper_smoke.yaml  product_mega.yaml  product_mega_smoke.yaml  runtime.yaml  v1.yaml
docs/: product-licensing.md  product-quality.md  product-setup.md
examples/: load_dataset.py
knowledge-base/: CHUNK-00354-graph_traversal_for_dependency_analysis_faq_v0.md  CHUNK-00355-graph_traversal_for_dependency_analysis_guide_v1.md  CHUNK-00356-graph_traversal_for_dependency_analysis_runbook_v2.md  CHUNK-00357-graph_traversal_for_dependency_analysis_api_reference_v3.md  CHUNK-00358-graph_traversal_for_dependency_analysis_architecture_decisio.md  CHUNK-00359-graph_traversal_for_dependency_analysis_troubleshooting_v5.md  CHUNK-00360-graph_traversal_for_dependency_analysis_best_practices_v6.md  CHUNK-00361-graph_traversal_for_dependency_analysis_code_walkthrough_v7.md  (+144 more)
runtime/: __init__.py  __main__.py  (+1 more)
(+540 files in other folders)
