[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "coltex"
version = "5.0.0"
description = "Coltex Mega RAG — The largest commercial RAG corpus (100,000,000+ sellable knowledge files)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
coltex = "runtime.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "brain*"]
